# AviAnki

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  allaboutbirds.py  anki_model.py  build_bird_deck.py  ebird.py  main.py  media.py  pyproject.toml
.github/workflows/: publish.yml
examples/: example-birds.json
scripts/: gen_examples.py  gen_previews.py
src/avianki/: allaboutbirds.py  anki_model.py  card.css  cli.py  ebird.py  media.py  redact.py
tests/: conftest.py  test_allaboutbirds.py  test_anki_model.py  test_avianki.py  test_cli_args.py  test_integration.py  test_media.py  test_redact.py
tests/fixtures/: chickadee_browse.html  chickadee_overview.html  chickadee_sounds.html
