[project]
name = "anki-build-bird-deck"
version = "0.1.0"
description = "Build Anki flashcard decks for bird identification from allaboutbirds.org"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ian Costa" },
]
license = { text = "MIT" }
keywords = ["anki", "birds", "flashcards", "ornithology"]
dependencies = [
    "genanki>=0.13.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Repository = "https://github.com/Ian-Costa18/Anki-Build-Bird-Deck"
Issues = "https://github.com/Ian-Costa18/Anki-Build-Bird-Deck/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
