[project]
name = "avianki"
version = "0.8.3"
description = "Build Anki flashcard decks for bird identification from allaboutbirds.org"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ian Costa" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
keywords = ["anki", "birds", "flashcards", "ornithology"]
dependencies = [
    "bs4>=0.0.2",
    "genanki>=0.13.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
avianki = "avianki.cli:main"

[project.urls]
Repository = "https://github.com/Ian-Costa18/avianki"
Issues = "https://github.com/Ian-Costa18/avianki/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: hits the real network; run with --integration"]
filterwarnings = ["ignore::DeprecationWarning:cached_property"]

[dependency-groups]
dev = [
    "playwright>=1.40.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv[cli]>=1.2.2",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
